--- a/Index.cshtml
+++ b/Index.cshtml
@@ -7,7 +7,7 @@
 <h1>Index</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create">Create NNeeww</a>
 </p>
 <form asp-controller="Movies" asp-action="Index" method="get">
     <p>
